--- a/relinksys/api/views/Alif_Trades.ejs
+++ b/relinksys/api/views/Alif_Trades.ejs
@@ -64,8 +64,10 @@
 
     .prodcut-container tbody tr td{
         vertical-align: super !important;
-      
-       
+    }
+
+       .break {
+        page-break-inside: avoid;
     }
 </style>
 
@@ -229,7 +231,7 @@
 
         </table>
 
-        <table style="width: 100%; border-collapse: collapse;">
+        <table class="break" style="width: 100%; border-collapse: collapse;">
             <tr style="vertical-align: super;">
                 <td  style="text-align: center;border: 1px solid;  height: 150px; padding-top: 2px;">
                    <p>Team & Condition </p>
