--- a/relinksys/web/src/app/inventory/pre-order/pre-order.component.html
+++ b/relinksys/web/src/app/inventory/pre-order/pre-order.component.html
@@ -25,7 +25,7 @@
                         <form #f="ngForm" autocomplete="off" (ngSubmit)="addItem()">
                             <!-- save purchase start -->
                             <div class="row">
-                                <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 d-inline-flex">
+                                <!-- <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 d-inline-flex">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Supplier Name</mat-label>
                                         <mat-select name="Supplier" editable="true"
@@ -49,7 +49,7 @@
                                         [routerLink]="['/inventory/supplier']" [queryParams]="{ check: 1}">
                                         <mat-icon class="col-white plus_icon">add</mat-icon>
                                     </button>
-                                </div>
+                                </div> -->
                                 <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Invoice Number</mat-label>
