--- a/relinksys/web/src/app/sale/optometrist/optometrist.component.css
+++ b/relinksys/web/src/app/sale/optometrist/optometrist.component.css
@@ -92,9 +92,13 @@
       border-radius: 20px;
       padding: 2px;
       cursor: pointer;
+      text-align: left;
+      background-color: #fff; 
     }
 
-  
+  .fontbold{
+    font-weight: 600;
+  }
 
 
     .OEx-h4 {
@@ -105,10 +109,11 @@
 
     .sub-pb {
       padding-bottom: 2%;
+      font-weight: 600 !important;
     }
 
     .sub-tbl tr th {
-      padding: 5px;
+      padding: 5px; 
     }
 
     .split-button {
@@ -121,7 +126,7 @@
       font-weight: bold;
       text-align: center;
       cursor: pointer;
-      background: #f0f0f0;
+      background: #f0f0f0 ;
       margin-left: 40%;
     }
 
