--- a/relinksys/api/views/optometristPDF.ejs
+++ b/relinksys/api/views/optometristPDF.ejs
@@ -839,12 +839,12 @@
                                     <%= field.label %>
                                 </th>
 
-                                <td>
+                                <td style="font-weight: normal;">
                                     <% if (field.R) { %>
                                         <%= field.R %><br>
                                             <% } %>
                                 </td>
-                                <td>
+                                <td style="font-weight: normal;">
                                     <% if (field.L) { %>
                                         <%= field.L %>
                                             <% } %>
@@ -881,13 +881,10 @@
                 </th>
             </tr>
 
-            
-
-
-
-
         </table>
 </section>
+
+
         <section style="width: 100%;">
             <table style="width: 100%; text-align: left;">
                 <tr>
