--- a/relinksys/web/src/app/admin/company-setting/company-setting.component.html
+++ b/relinksys/web/src/app/admin/company-setting/company-setting.component.html
@@ -321,7 +321,7 @@
                                                                 <mat-option value="Sai_Drushti.ejs">Sai_Drushti.ejs</mat-option>
                                                                 <mat-option value="Alif_Trades.ejs">Alif_Trades.ejs</mat-option>
                                                                 <mat-option value="vision_world.ejs">vision_world</mat-option>
-                                                                <mat-option value="thermal print.ejs">thermal</mat-option>
+                                                                <mat-option value="thermal print.ejs">ChasmaMart</mat-option>
                                                                 <mat-option value="optometric.ejs">optometrist</mat-option>
                                                             </mat-select>
                                                             <mat-error>Bill Format </mat-error>
