--- a/relinksys/api/views/invoice_Box.ejs
+++ b/relinksys/api/views/invoice_Box.ejs
@@ -4,6 +4,7 @@
 <style>
     * {
         border-bottom: 1xp solid;
+        
     }
     .headingName {
          position: absolute;
@@ -14,7 +15,8 @@
          font-size: 16px !important;
       }
     html body{
-        zoom: 80% !important;
+        zoom: 79% !important;
+        padding-bottom: 50px !important;
     }
     .watermark{
         position: absolute;
@@ -55,6 +57,7 @@
 
 .Prod_tbl tbody tr  {
     vertical-align:super !important;
+     page-break-before: always !important;
 }
 
 .Prod_tbl td {
