--- a/relinksys/web/src/app/report/sale-report/sale-report.component.html
+++ b/relinksys/web/src/app/report/sale-report/sale-report.component.html
@@ -888,6 +888,13 @@
                                                 </button>
 
                                             </div>
+                                            <div class="col-xl-12 col-lg-12 col-md-12 col-12 mb-0 " >
+                            <table style="width:100%">
+                               <tr >
+                                  <th *ngFor="let da of dataProductWise?.data; let i = index" style="border:1px solid #000;  text-align: left; padding-left:1%"> {{da.ProductTypeName}} - <span style="color:red">{{da.TotalCount}}</span> </th>
+                               </tr>
+                            </table>
+                      </div>
                                         </div>
                                     </form>
                                     <!-- Purchase Detailed list -->
