--- a/relinksys/web/src/app/report/inventory-report/inventory-report.component.html
+++ b/relinksys/web/src/app/report/inventory-report/inventory-report.component.html
@@ -239,9 +239,15 @@
                       <div class="col-xl-2 col-lg-2 col-md-6 col-12 mb-0 " *ngIf="this.selectedProduct == 'LENS'">
                         <button *ngIf="company.ID == 241 || company.ID == 1 " type="button"   (click)="openModalS(content0000)" mat-raised-button color="primary" >Base Grid</button>
                       </div>
-
-
+                      <div class="col-xl-12 col-lg-12 col-md-12 col-12 mb-0 " >
+                            <table style="width:100%">
+                               <tr >
+                                  <th *ngFor="let da of dataProductWise?.data; let i = index" style="border:1px solid #000;  text-align: left; padding-left:1%"> {{da.ProductTypeName}} - <span style="color:red">{{da.TotalCount}}</span> </th>
+                               </tr>
+                            </table>
+                      </div>
                     </div>
+
                   </form>
                   <!--  list -->
                   <div class="body p-2">
